--- a/http/index.html
+++ b/http/index.html
@@ -2165,6 +2165,8 @@ General Terms and Conditions applicable to Use of a Web Site.
             <button onclick="singlesitenav('home')">Agree</button>
         </div>
     </header>
+<header style="padding-top:50px" id="WebSettings">
+    </header>
     <section id='soundboard' style="display:none;">
         <audio id="soundactivateCard" preloaded="auto" src="sounds/activate.wav"></audio>
         <audio id="soundattack" preloaded="auto" src="sounds/attack.wav"></audio>
